html target not needed anymore
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1938 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,12 +1,12 @@
 default: examples.dvi
 
 clean:
-	-rm -f examples.tex examples.log examples.aux examples.dvi examples.ps examples.pdf *.eps */*.eps *.py.html */*.py.html *.png */*.png
+	-rm -f examples.tex examples.log examples.aux examples.dvi examples.ps examples.pdf *.eps */*.eps *.png */*.png
 
 all:
 	make clean
 	make pdf
-	make html
+	make png
 
 pdf: examples.pdf
 ps: examples.ps
@@ -20,7 +20,6 @@ examples.ps: examples.dvi
 
 files = $(foreach item, $(shell grep -v / INDEX), $(item)) $(foreach item, $(shell grep / INDEX), $(addprefix $(item), $(shell cat $(item)INDEX)))
 pyfiles = $(addsuffix .py, $(files))
-htmlfiles = $(addsuffix .py.html, $(files))
 epsfiles = $(addsuffix .eps, $(files))
 pngfiles = $(addsuffix .png, $(files))
 
@@ -31,13 +30,10 @@ examples.dvi: examples.py $(epsfiles)
 	latex examples.tex
 	-rm -f examples.ps examples.pdf
 
-html: $(htmlfiles) $(pngfiles)
+png: $(pngfiles)
 
 %.eps: %.py
 	cd $(dir $^); PYTHONPATH=$(PWD)/.. python $(notdir $^)
-
-%.py.html: %.py
-	sh -c "py2html -format:rawhtml $^"
 
 %.png: %.eps
 	python ../contrib/epstopng.py -o $@ $^
