create paths, when necessary
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1944 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/www/Makefile
+++ b/www/Makefile
@@ -18,10 +18,11 @@ public:
 	-ssh $(publicserver) "cd $(publicpath); chmod -fR g+w *"
 
 build: always
+	-mkdir build
 	cp $(imagefiles) $(cssfiles) build
 	cp png/*.png ../manual/manual.pdf ../faq/pyxfaq.pdf build
 	cp -r ../manual/manual build
-	for d in "" $(shell grep / ../examples/INDEX); do cp ../examples/$$d*.png ../examples/$$d*.eps build/examples/$$d; done
+	for d in "" $(shell grep / ../examples/INDEX); do mkdir build/examples/$$d; cp ../examples/$$d*.png ../examples/$$d*.eps build/examples/$$d; done
 	PYTHONPATH=~/bin/python/Zope3/src ./pt2html.py
 
 always:
