use CURDIR instead of PWD (reported by David M. Cooke, bug #1070285)
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1960 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -33,7 +33,7 @@ examples.dvi: examples.py $(epsfiles)
 png: $(pngfiles)
 
 %.eps: %.py
-	cd $(dir $^); PYTHONPATH=$(PWD)/.. python $(notdir $^)
+	cd $(dir $^); PYTHONPATH=$(CURDIR)/.. python $(notdir $^)
 
 %.png: %.eps
 	python ../contrib/epstopng.py -o $@ $^
