--- a/www/png/Makefile
+++ b/www/png/Makefile
@@ -8,6 +8,6 @@ clean:
 	-rm $(pngfiles)
 
 %.png: %.py
-	export PYTHONPATH=$(PWD)/../.. ; cd $(dir $^) ; python $(notdir $^)
+	export PYTHONPATH=$(CURDIR)/../.. ; cd $(dir $^) ; python $(notdir $^)
 	python ../../contrib/epstopng.py -o $@ $*.eps
 	rm $*.eps
