target for tipa snippet creation
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1971 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/faq/Makefile
+++ b/faq/Makefile
@@ -35,3 +35,12 @@ public:
 	@bash -c 'yn=""; while [ "x"$$yn != "xy" ]; do echo -n "upload pyxfaq.pdf? [y/n] "; read yn; if [ "x"$$yn == "xn" ]; then exit 1; fi; done'
 	scp pyxfaq.pdf $(publicserver):$(publicpath)
 	-ssh $(publicserver) "cd $(publicpath); chmod -fR g+w pyxfaq.pdf"
+
+tipasnippets: $(patsubst %.tex, %.pdf, $(wildcard tipa?.tex))
+
+tipa%.pdf: tipa%.tex
+	latex tipa$*
+	dvips -E tipa$*
+	ps2pdf -dEPSCrop tipa$*.ps
+	rm tipa$*.log tipa$*.aux tipa$*.dvi tipa$*.ps
+
