add readme files
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1977 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,5 +5,5 @@ include examples/Makefile examples/pyx.sty
 recursive-include pyx *.c *.h *.py
 recursive-include pyx/lfs *.lfs createlfs.tex
 recursive-include contrib *
-recursive-include examples INDEX *.py *.dat
+recursive-include examples INDEX README *.py *.dat
 exclude manual/pyxversion.py manual/pyxdate.py faq/pyxversion.py faq/pyxdate.py
