pdflatex glifaq twice
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1982 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/faq/Makefile
+++ b/faq/Makefile
@@ -21,6 +21,7 @@ glifaq.sty: glifaq.dtx glifaq.ins
 
 glifaq.pdf: glifaq.dtx
 	pdflatex glifaq.dtx
+	pdflatex glifaq.dtx
 
 pyxversion.tex: ../pyx/version.py
 	python -c "import sys;sys.path[:0]=[\"..\"];import pyx.version;print pyx.version.version+'%'" > pyxversion.tex
