chmod target for handy chmod correction after partial upload of builds ...
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1989 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/www/Makefile
+++ b/www/Makefile
@@ -15,6 +15,9 @@ clean:
 
 public:
 	scp -oCompression=yes -r build/* $(publicserver):$(publicpath)
+	make chmod
+
+chmod:
 	-ssh $(publicserver) "cd $(publicpath); chmod -fR g+w *"
 
 build: always
