icons moved to separate directory; download icons in example pages
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2063 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/www/Makefile
+++ b/www/Makefile
@@ -1,8 +1,6 @@
 default: build
 
 htmlfiles = $(patsubst %.pt, %.html, $(filter-out maintemplate.pt examples.pt, $(wildcard *.pt))) examples/index.html $(patsubst %, examples/%index.html, $(shell grep / ../examples/INDEX))
-imagefiles = valid-html401.png vcss.png pyx.ico
-cssfiles = main.css
 publicserver = shell.sourceforge.net
 publicpath = /home/groups/p/py/pyx/htdocs
 
@@ -22,7 +20,8 @@ chmod:
 
 build: always
 	-mkdir build
-	cp $(imagefiles) $(cssfiles) build
+	cp main.css build
+	cp -r icons build
 	cp png/*.png ../manual/manual.pdf ../faq/pyxfaq.pdf build
 	cp -r ../manual/manual build
 	for d in "" $(shell grep / ../examples/INDEX); do mkdir build/examples/$$d; cp ../examples/$$d*.png ../examples/$$d*.eps build/examples/$$d; done
