--- a/examples/.cvsignore
+++ b/examples/.cvsignore
@@ -1,1 +1,1 @@
-examples.aux examples.log examples.dvi examples.toc *.size *.eps *.py.html *.png examples.ps examples.pdf examples.tex
+examples.aux examples.log examples.dvi examples.toc examples.ps examples.pdf examples.tex *.eps *.png
