replace icons by text
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2126 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/www/Makefile
+++ b/www/Makefile
@@ -24,7 +24,17 @@ build: always
 	cp -r icons build
 	cp png/*.png ../manual/manual.pdf ../faq/pyxfaq.pdf build
 	cp -r ../manual/manual build
-	for d in "" $(shell grep / ../examples/INDEX); do mkdir build/examples/$$d; cp ../examples/$$d*.png ../examples/$$d*.eps build/examples/$$d; done
+	for d in "" $(shell grep / ../examples/INDEX); \
+	do \
+	  mkdir build/examples/$$d; \
+	  for s in png py dat eps pdf; \
+	  do \
+	    if [[ -x ../examples/$$d*.$$s ]] ; \
+	    then \
+	      cp ../examples/$$d*.$$s build/examples/$$d; \
+	    fi; \
+	  done; \
+	done
 	PYTHONPATH=~/bin/python/Zope3/src ./pt2html.py
 
 always:
