build pdf examples; remove examples-document from distribution
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2198 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/examples/.cvsignore
+++ b/examples/.cvsignore
@@ -1,1 +1,1 @@
-examples.aux examples.log examples.dvi examples.toc examples.ps examples.pdf examples.tex *.eps *.png *.html
+examples.tex examples.log examples.aux examples.dvi *.eps *.pdf *.png
