--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,8 @@
 include AUTHORS CHANGES INSTALL LICENSE PKG-INFO README pyxrc setup.cfg setup.py
 include manual/Makefile manual/pyx.sty manual/*.tex manual/*.py manual/*.dat
 include faq/Makefile faq/pyxfaq.tex faq/glifaq.dtx faq/glifaq.ins faq/tipa?.tex faq/tipa?.pdf
-include examples/Makefile examples/pyx.sty
 recursive-include pyx *.c *.h *.py
 recursive-include pyx/lfs *.lfs createlfs.tex
 recursive-include contrib *
-recursive-include examples INDEX README *.py *.dat
-exclude manual/pyxversion.py manual/pyxdate.py faq/pyxversion.py faq/pyxdate.py
+recursive-include examples README *.py *.dat *.jpg
+exclude manual/pyxversion.py manual/pyxdate.py faq/pyxversion.py faq/pyxdate.py examples/examples.py
