final cleanups for 0.8
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2277 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/www/Makefile
+++ b/www/Makefile
@@ -30,7 +30,7 @@ build: always
 	  mkdir build/examples/$$d; \
 	  for s in png py jpg dat eps pdf; \
 	  do \
-	    cp ../examples/$$d*.$$s build/examples/$$d; \
+	    cp ../examples/$$d*.$$s build/examples/$$d 2> /dev/null; \
 	  done; \
 	done
 	PYTHONPATH=~/bin/python/Zope3/src ./pt2html.py
