- move the icons back into the root directory Motivation:   - unfortunately the icons subdirectory is rewritten by the apache     as configured on SF (so the icons subdirectory just didn't work)   - we don't have a whole lot of icons since we don't use them for     file type identification as it was the original idea
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2285 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/www/Makefile
+++ b/www/Makefile
@@ -21,8 +21,7 @@ chmod:
 build: always
 	-mkdir build
 	cp main.css build
-	-mkdir build/icons
-	-cp icons/* build/icons
+	-cp *.png *.ico build
 	cp png/*.png ../manual/manual.pdf ../faq/pyxfaq.pdf build
 	cp -r ../manual/manual build
 	for d in "" $(shell grep / ../examples/INDEX); \
