remove old cvsignore stuff
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2324 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/.cvsignore
+++ b/manual/.cvsignore
@@ -1,1 +1,1 @@
-*.eps *.pdf *.png *.aux *.idx *.syn *.ind manual.dvi manual.ps manual mkhowto pyxversion.tex pyxdate.tex
+*.eps *.pdf *.aux *.idx *.syn *.ind manual.dvi manual mkhowto pyxversion.tex pyxdate.tex
